# cxx-corrosion-cmake

./: .gitignore  CMakeLists.txt  README.MD
.github/workflows/: docker-image.yml
cmake/: corrosion_cxx.cmake
examples/: CMakeLists.txt  Dockerfile
examples/rust-from-cpp/: CMakeLists.txt  Dockerfile
examples/rust-from-cpp/src/: main.cpp
examples/rust-from-cpp/src/cxxbridge_code/: Cargo.toml
examples/src/: main.cpp
examples/src/cxxbridge_code/: Cargo.toml
examples/src/cxxbridge_code/src/: lib.rs
src/: main.cpp
src/cxxbridge_code/src/: lib.rs
src/rusty_code/: Cargo.toml
src/rusty_code/src/: lib.rs
