[package]
name = "cxxbridge_code"
version = "0.1.0"
authors = ["Trond H Emaus <trondhe@gmail.com>", "Max Kalashnikoff <geekmaks@gmail.com>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tokio = { version = "1.14", features = ["rt-multi-thread"]}
lazy_static = "1.4"
a2 = "0.6"
cxx = "1.0"
log = "0.4"
fcm = "0.9"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
